--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,15 @@
 .read-the-docs {
   color: #888;
 }
+
+#Message {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+}
